--- a/index.html
+++ b/index.html
@@ -104,7 +104,13 @@
       <br>
       <a href="upcoming.html" target="_blank">UpComing </a>
     </div>
+     <div class="project">
+      <i class="fas fa-calendar"></i>
+      <br>
+      <a href="upcoming.html" target="_blank">UpComing </a>
+    </div>
   </div>
 
 </body>
 </html>
+
