--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <div class="project">
       <i class="fas fa-calendar"></i>
       <br>
-      <a href="upcoming.html" target="_blank">Weather App </a>
+      <a href="weather-app.html" target="_blank">Weather App </a>
     </div>
      <div class="project">
       <i class="fas fa-calendar"></i>
@@ -113,5 +113,6 @@
 
 </body>
 </html>
+
 
 
