--- a/index.html
+++ b/index.html
@@ -100,8 +100,7 @@
     </div>
 
     <div class="project">
-      <i class="fas fa-calendar"></i>
-      <br>
+<i class="fa-solid fa-cloud-moon"></i>      <br>
       <a href="weather-app.html" target="_blank">Weather App </a>
     </div>
      <div class="project">
@@ -113,6 +112,7 @@
 
 </body>
 </html>
+
 
 
 
